<!--
  ~ Copyright (C) 2015 Daniel Schaal <daniel@schaal.email>
  ~
  ~ This file is part of OCReader.
  ~
  ~ OCReader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ OCReader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with OCReader.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="email.schaal.ocreader.LoginActivity">

        <include android:id="@+id/toolbar_layout"
                 layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/materialize_spacing"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="email.schaal.ocreader.LoginActivity">

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/materialize_spacing"
                android:visibility="gone"/>

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/materialize_spacing">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_url"
                            android:inputType="textUri"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/materialize_spacing">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/materialize_spacing">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@integer/ime_login_id"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/materialize_spacing"
                        android:drawablePadding="@dimen/materialize_spacing"
                        android:drawableStart="@drawable/ic_warning"
                        android:gravity="center_vertical"
                        android:visibility="gone"
                        tools:text="This is a warning!"
                        tools:visibility="visible"/>

                    <Button
                        android:id="@+id/sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"/>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>